# simple_raytracer

./: .gitignore  CMakeLists.txt  README.md
include/: camera.hpp  color.hpp  film.hpp  glwidget.hpp  intersection.hpp  macros.hpp  mainwindow.hpp  phong_light.hpp  phong_material.hpp  point.hpp  ray.hpp  renderable.hpp  scene.hpp  scene_graph_optimizer.hpp  sphere.hpp  types.hpp
src/: camera.cpp  film.cpp  glwidget.cpp  main.cpp  main_cl.cpp  main_gl.cpp  mainwindow.cpp  phong_light.cpp  point.cpp  scene.cpp  scene_graph_optimizer.cpp  sphere.cpp
